fixed service section title align on big screens

--- a/src/components/ServiceSection/ServiceSection.module.css
+++ b/src/components/ServiceSection/ServiceSection.module.css
@@ -28,6 +28,7 @@
   font-weight: 400;
   line-height: 84.41px;
   text-align: center;
+  max-width: 70rem;
   opacity: 0; /* Start with 0 opacity */
   transition: opacity 1.5s ease-in-out;
   transition-delay: 0.5s; /* Add transition for smooth animation */
@@ -38,7 +39,7 @@
 }
 
 .sectionSubtitle {
-  max-width: 80%;
+  max-width: 52rem;
   font-size: 15px;
   font-weight: 400;
   line-height: 17.58px;
